Footer queries done
iPad y mobile.

--- a/saludconciencia/src/sass/_footer.scss
+++ b/saludconciencia/src/sass/_footer.scss
@@ -10,6 +10,9 @@
         margin-right: 10rem;
         flex: 0 0 50%;
         padding: 5rem 0;
+        @media screen and (max-width: 992px) {
+            margin-right: 5%;
+        }
         &:first-of-type div {
             margin-bottom: 2rem;
         }
@@ -23,22 +26,39 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        @media screen and (max-width: 992px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__menu__left {
         display: flex;
+        @media screen and (max-width: 992px) {
+            width: 100%;
+            justify-content: space-evenly;
+        }
         &-1{
             display: flex;
             flex-direction: column;
             margin-right: 10rem;
+            @media screen and (max-width: 992px) {
+                margin: 0;
+            }
             &-title{
                 margin-bottom: 3rem;
+                @media screen and (max-width: 992px) {
+                    margin-bottom: 2rem;
+                }
             }
             &-list{
                 display: flex;
                 flex-direction: column;
                 & > span {
                     margin-bottom: 2rem;
+                    @media screen and (max-width: 992px) {
+                        margin: 0;
+                    }
                 }
             }
         }
@@ -47,14 +67,23 @@
             display: flex;
             flex-direction: column;
             margin-right: 10rem;
+            @media screen and (max-width: 992px) {
+                margin: 0;
+            }
             &-title{
                 margin-bottom: 3rem;
+                @media screen and (max-width: 992px) {
+                    margin-bottom: 2rem;
+                }
             }
             &-list{
                 display: flex;
                 flex-direction: column;
                 & > span {
                     margin-bottom: 2rem;
+                    @media screen and (max-width: 992px) {
+                        margin: 0;
+                    }
                 }
             }
         }
@@ -62,6 +91,34 @@
 
     &__menu__right{
         margin-right: 5rem;
+        //iPhone 6/7/8 plus
+        @media screen 
+        and (max-width: 414px)
+        and (device-height: 736px){
+            margin: 0;
+        }
+        //Pixel 2
+        @media screen and (max-width: 411px) {
+            margin: 0;
+        }
+        //iPhone 6/7/8
+        @media screen 
+        and (max-width: 375px)
+        and (height: 667px){
+            margin: 0;
+        }
+        //iPhone X
+        @media screen and (max-width: 375px){
+            margin: 0;
+        }
+        //Moto G4/Galaxy S5
+        @media screen and (max-width: 360px) {
+            margin: 0;
+        }
+        //iPhone 5
+        @media screen and (max-width: 320px){
+            margin: 0;
+        }
         &-1, &-3{
             display: flex;
             flex-direction: column;
@@ -69,6 +126,47 @@
             align-content: center;
             align-items: center;
             margin-bottom: 2rem;
+            flex-wrap: wrap;
+            @media screen and (max-width: 992px) {
+                flex-direction: row;
+            }
+        }
+
+        &-4{
+            //iPhone 6/7/8 plus
+            @media screen 
+            and (max-width: 414px)
+            and (device-height: 736px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //Pixel 2
+            @media screen and (max-width: 411px) {
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone 6/7/8
+            @media screen 
+            and (max-width: 375px)
+            and (height: 667px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone X
+            @media screen and (max-width: 375px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //Moto G4/Galaxy S5
+            @media screen and (max-width: 360px) {
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone 5
+            @media screen and (max-width: 320px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
         }
     }
 
@@ -112,19 +210,53 @@
 }
 
 .footer{
-    //scroll-snap-align: start;
     display: flex;
     flex-direction: column;
     position: relative;
-    //margin-top: 10rem;
     padding-top: 10rem;
-    //box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
     &-up{
         align-self: flex-end;
         margin-right: 10rem;
         flex: 0 0 50%;
         padding: 5rem 0;
+        @media screen and (max-width: 992px) {
+            margin-right: 5%;
+        }
+        //iPhone 6/7/8 plus
+        @media screen 
+        and (max-width: 414px)
+        and (device-height: 736px){
+            margin: 0;
+            text-align: center;
+        }
+        //Pixel 2
+        @media screen and (max-width: 411px) {
+            margin: 0;
+            text-align: center;
+        }
+        //iPhone 6/7/8
+        @media screen 
+        and (max-width: 375px)
+        and (height: 667px){
+            margin: 0;
+            text-align: center;
+        }
+        //iPhone X
+        @media screen and (max-width: 375px){
+            margin: 0;
+            text-align: center;
+        }
+        //Moto G4/Galaxy S5
+        @media screen and (max-width: 360px) {
+            margin: 0;
+            text-align: center;
+        }
+        //iPhone 5
+        @media screen and (max-width: 320px){
+            margin: 0;
+            text-align: center;
+        }
         &:first-of-type div {
             margin-bottom: 2rem;
         }
@@ -138,22 +270,39 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        @media screen and (max-width: 992px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__menu__left {
         display: flex;
+        @media screen and (max-width: 992px) {
+            width: 100%;
+            justify-content: space-evenly;
+        }
         &-1{
             display: flex;
             flex-direction: column;
             margin-right: 10rem;
+            @media screen and (max-width: 992px) {
+                margin: 0;
+            }
             &-title{
                 margin-bottom: 3rem;
+                @media screen and (max-width: 992px) {
+                    margin-bottom: 2rem;
+                }
             }
             &-list{
                 display: flex;
                 flex-direction: column;
                 & > span {
                     margin-bottom: 2rem;
+                    @media screen and (max-width: 992px) {
+                        margin: 0;
+                    }
                 }
             }
         }
@@ -162,14 +311,23 @@
             display: flex;
             flex-direction: column;
             margin-right: 10rem;
+            @media screen and (max-width: 992px) {
+                margin: 0;
+            }
             &-title{
                 margin-bottom: 3rem;
+                @media screen and (max-width: 992px) {
+                    margin-bottom: 2rem;
+                }
             }
             &-list{
                 display: flex;
                 flex-direction: column;
                 & > span {
                     margin-bottom: 2rem;
+                    @media screen and (max-width: 992px) {
+                        margin: 0;
+                    }
                 }
             }
         }
@@ -177,6 +335,34 @@
 
     &__menu__right{
         margin-right: 5rem;
+        //iPhone 6/7/8 plus
+        @media screen 
+        and (max-width: 414px)
+        and (device-height: 736px){
+            margin: 0;
+        }
+        //Pixel 2
+        @media screen and (max-width: 411px) {
+            margin: 0;
+        }
+        //iPhone 6/7/8
+        @media screen 
+        and (max-width: 375px)
+        and (height: 667px){
+            margin: 0;
+        }
+        //iPhone X
+        @media screen and (max-width: 375px){
+            margin: 0;
+        }
+        //Moto G4/Galaxy S5
+        @media screen and (max-width: 360px) {
+            margin: 0;
+        }
+        //iPhone 5
+        @media screen and (max-width: 320px){
+            margin: 0;
+        }
         &-1, &-3{
             display: flex;
             flex-direction: column;
@@ -184,6 +370,46 @@
             align-content: center;
             align-items: center;
             margin-bottom: 2rem;
+            flex-wrap: wrap;
+            @media screen and (max-width: 992px) {
+                flex-direction: row;
+            }
+        }
+        &-4{
+            //iPhone 6/7/8 plus
+            @media screen 
+            and (max-width: 414px)
+            and (device-height: 736px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //Pixel 2
+            @media screen and (max-width: 411px) {
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone 6/7/8
+            @media screen 
+            and (max-width: 375px)
+            and (height: 667px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone X
+            @media screen and (max-width: 375px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //Moto G4/Galaxy S5
+            @media screen and (max-width: 360px) {
+                font-size: 2rem !important;
+                text-align: center;
+            }
+            //iPhone 5
+            @media screen and (max-width: 320px){
+                font-size: 2rem !important;
+                text-align: center;
+            }
         }
     }
 
@@ -226,8 +452,157 @@
     }
 }
 
+.gato-logo-index{
+    position: absolute;
+    left: 5%;
+    top: 10%;
+    width: 18%;
+    height: auto;
+    @media screen and (max-width: 1200px) {
+        
+    }
+    /* Portrait iPad Pro 12.9"*/
+    @media only screen 
+    and (min-device-width: 1024px) 
+    and (max-device-width: 1024px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 2) {
+        
+    }
+    /* Portrait iPad Pro 10.5"*/
+    @media only screen 
+    and (min-device-width: 834px) 
+    and (max-device-width: 834px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 2) {
+        left: 60%;
+        top: 18%;
+    }
+    /* Portrait iPad*/
+    @media only screen 
+    and (min-device-width: 768px) 
+    and (max-device-width: 768px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 1) {
+        left: 60%;
+        top: 18%;
+    }
+    //iPhone 6/7/8 plus
+    @media screen 
+    and (max-width: 414px)
+    and (device-height: 736px){
+        top: 30%;
+        left: 35%;
+        width: 25%;
+    }
+    //Pixel 2
+    @media screen and (max-width: 411px) {
+        top: 30%;
+        left: 35%;
+        width: 25%;
+    }
+    //iPhone 6/7/8
+    @media screen 
+    and (max-width: 375px)
+    and (height: 667px){
+        top: 32%;
+        left: 35%;
+        width: 25%;
+    }
+    //iPhone X
+    @media screen and (max-width: 375px){
+        top: 32%;
+        left: 35%;
+        width: 25%;
+    }
+    //Moto G4/Galaxy S5
+    @media screen and (max-width: 360px) {
+        top: 32%;
+        left: 35%;
+        width: 25%;
+    }
+    //iPhone 5
+    @media screen and (max-width: 320px){
+        top: 35%;
+        left: 35%;
+        width: 25%;
+    }
+}
+
 .gato-logo{
     position: absolute;
-    left: 5rem;
-    top: 3rem;
+    left: 5%;
+    top: 10%;
+    width: 18%;
+    height: auto;
+    @media screen and (max-width: 1200px) {
+        
+    }
+    /* Portrait iPad Pro 12.9"*/
+    @media only screen 
+    and (min-device-width: 1024px) 
+    and (max-device-width: 1024px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 2) {
+        left: 3%;
+        top: 25%;
+    }
+    /* Portrait iPad Pro 10.5"*/
+    @media only screen 
+    and (min-device-width: 834px) 
+    and (max-device-width: 834px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 2) {
+        left: 60%;
+        top: 25%;
+    }
+    /* Portrait iPad*/
+    @media only screen 
+    and (min-device-width: 768px) 
+    and (max-device-width: 768px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 1) {
+        left: 60%;
+        top: 28%;
+    }
+    //iPhone 6/7/8 plus
+    @media screen 
+    and (max-width: 414px)
+    and (device-height: 736px){
+        top: 37%;
+        left: 35%;
+        width: 25%;
+    }
+    //Pixel 2
+    @media screen and (max-width: 411px) {
+        top: 38%;
+        left: 35%;
+        width: 25%;
+    }
+    //iPhone X
+    @media screen and (max-width: 375px){
+        top: 39%;
+        left: 34%;
+        width: 25%;
+    }
+    //iPhone 6/7/8
+    @media screen 
+    and (max-width: 375px)
+    and (height: 667px){
+        top: 39%;
+        left: 35%;
+        width: 25%;
+    }
+    //Moto G4/Galaxy S5
+    @media screen and (max-width: 360px) {
+        top: 39%;
+        left: 36%;
+        width: 25%;
+    }
+    //iPhone 5
+    @media screen and (max-width: 320px){
+        top: 43%;
+        left: 37%;
+        width: 25%;
+    }
 }
