--- a/saludconciencia/src/sass/_paraTi.scss
+++ b/saludconciencia/src/sass/_paraTi.scss
@@ -1,7 +1,24 @@
 @import './_colors.scss';
 $color-gray-dark-3: #999;
-.paraTi__wrapper > div{
-    margin-bottom: 5rem;
+
+$fs-400: 1rem;
+$fs-500: 2rem;
+$fs-600: 3rem;
+
+:root{
+    --fs-slide5: 3vw;
+
+    --fs-titulos: 4vw;
+    --fs-subtitulos: 2vw;
+    --fs-agenda: 2vw;
+
+    --fs-greenCard-main: 1.8vw;
+    --fs-greenCard-auth: 1.5vw;
+    --fs-greenCard-info: 1.3vw;
+
+    --fs-reviewCard-name: 2.5rem;
+    --fs-reviewCard-occupation: 1.7rem;
+    --fs-reviewCard-review: 1.5rem;
 }
 
 .paraTi__slide1{
@@ -16,8 +33,9 @@ $color-gray-dark-3: #999;
         padding-left: 3%;
         &-up{
             color: $color_text_green;
-            font-size: 4vw;
-            line-height: 5vw;
+            font-size: var(--fs-titulos);
+            line-height: var(--fs-titulos);
+            //line-height: calc(var(--fs-titulos)-1rem);
         }
         &-mid{
             display: flex;
@@ -25,17 +43,28 @@ $color-gray-dark-3: #999;
             width: 100%;
 
             color: $color_text_gray;
-            font-size: 2vw;
-            line-height: 2vw;
+            font-size: var(--fs-subtitulos);
+            line-height: var(--fs-subtitulos);
+            //line-height: calc(var(--fs-subtitulos)-1rem);
             margin: 10% 0;
         }
         &-bot{
             background-color: $color_text_green;
             color: white;
-            //font-size: 3rem;
             font-size: 2vw;
-            //padding: 2.5rem 2.5rem;
+            font-size: var(--fs-agenda);
             padding: 2vw 2vw;
+
+            border: none;
+            cursor: pointer;
+
+            &:hover{
+                background-color: lighten($color_text_green, 5%);
+            }
+
+            &:focus{
+                
+            }
         }
     }
 
@@ -53,6 +82,8 @@ $color-gray-dark-3: #999;
 .paraTi__slide2{
     display: flex;
 
+    margin-bottom: 10rem;
+
     &__textleft{
         flex: 0 0 50%;
         display: flex;
@@ -66,11 +97,10 @@ $color-gray-dark-3: #999;
             color: $color_text_green;
             // font-size: 8rem;
             // line-height: 9rem;
-            font-size: 5vw;
-            line-height: 6vw;
+            font-size: var(--fs-titulos);
+            line-height: var(--fs-titulos);
             display: flex;
             flex-direction: column;
-
             margin-bottom: 5rem;
         }
 
@@ -78,8 +108,8 @@ $color-gray-dark-3: #999;
             color: $color_text_gray;
             // font-size: 4rem;
             // line-height: 5rem;
-            font-size: 2vw;
-            line-height: 2.5vw;
+            font-size: var(--fs-subtitulos);
+            line-height: var(--fs-subtitulos);
             display: flex;
             flex-direction: column;
         }
@@ -102,14 +132,6 @@ $color-gray-dark-3: #999;
             position: absolute;
             bottom: 0;
             left: -8%;
-
-            //box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-            //box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-            //box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-            //box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-            //box-shadow: 8px -9px 13px -6px #000000;
-            //box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-            //box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
             box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
             &-text{
                 display: flex;
@@ -117,14 +139,14 @@ $color-gray-dark-3: #999;
                 padding: 3% 5%;
 
                 &-main{
-                    font-size: 1.8vw;
+                    font-size: var(--fs-greenCard-main);
                 }
                 &-author{
-                    font-size: 1.5vw;
+                    font-size: var(--fs-greenCard-auth);
                     margin-top: 2rem;
                 }
                 &-info{
-                    font-size: 1.3vw;
+                    font-size: var(--fs-greenCard-info);
                 }
             }
         }
@@ -253,4 +275,224 @@ $color-gray-dark-3: #999;
     border-bottom-right-radius: 6vw;
 }
 
-.paraTi__slide5{}
+.paraTi__slide5{
+    margin-top: 10rem;
+    margin-bottom: 30rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+
+    &__title{
+        color: $color_text_blue;
+        font-size: var(--fs-slide5);
+        width: 100%;
+        text-align: center;
+    }
+    &-cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        & > div  {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            width: 100%;
+        }
+    }
+}
+
+.reviewCard {
+    min-height: 40rem;
+    max-width: 40rem;
+    border: 2px solid hsla(0, 0%, 60%, 0.76);
+    padding: 4rem 2rem;
+    margin-bottom: 5rem;
+    border-radius: 10px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+
+    transition: border .2s, box-shadow .2s;
+
+    &-review{
+        font-size: var(--fs-reviewCard-review);
+        color: $color_text_green;
+        padding: 0 3rem;
+        flex: 1;
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+    
+    &__top{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        &-img{
+            max-width: 10rem;
+            height: auto;
+            margin-bottom: 1.5rem;
+        }
+    
+        &-name{
+            font-size: var(--fs-reviewCard-name);
+        }
+    
+        &-occupation{
+            font-size: var(--fs-reviewCard-occupation);
+        }
+
+        &-separator{
+            height: 1px;
+            width: 80%;
+            border-top: 1px solid black;
+            margin-top: 1.5rem;
+        }
+    }
+
+    &:hover{
+        border: 2px solid hsl(0, 0%, 60%);
+        box-shadow: rgba(17, 17, 26, 0.5) 0px 1px 0px, rgba(17, 17, 26, 0.5) 0px 8px 24px, rgba(17, 17, 26, 0.5) 0px 16px 48px;
+    }
+}
+
+@media screen and (max-width: 1400px){
+    :root{
+        --fs-reviewCard-name: 2.5rem;
+        --fs-reviewCard-occupation: 1.7rem;
+        --fs-reviewCard-review: 1.8rem;
+        --fs-slide5: 5vw;
+    }
+}
+@media screen and (max-width: 1200px){
+    :root{
+        --fs-reviewCard-name: 2.5rem;
+        --fs-reviewCard-occupation: 1.7rem;
+        --fs-reviewCard-review: 1.8rem;
+        --fs-slide5: 5vw;
+    }
+}
+@media screen and (max-width: 992px){
+    :root{
+        --fs-slide5: 5vw;
+    }
+    .paraTi__slide4{
+        &__cards {
+            gap: 0;
+            & > div {
+                flex-wrap: wrap;
+            }
+            &-front{
+                font-size: 1.8rem;
+            }
+            &-back{
+                font-size: 1.2rem;
+            }
+        }
+    }
+
+    .itembox{
+        width: 20rem;
+        height: 20rem;
+        margin-bottom: 2rem;
+    }
+
+}
+@media screen and (max-width: 768px) {
+
+    .paraTi__slide5{
+        &-cards > div {
+            flex-wrap: wrap;
+        }
+    }
+
+    .reviewCard{
+    }
+}
+
+@media screen and (max-width: 576px) {
+    :root{
+        --fs-slide5: 3rem;
+        --fs-reviewCard-name: 2rem;
+        --fs-reviewCard-occupation: 1.5rem;
+        --fs-reviewCard-review: 1.3rem;
+
+        --fs-titulos: 10vw;
+        --fs-subtitulos: 5vw;
+        --fs-agenda: 6vw;
+        --fs-greenCard-main: 4vw;
+        --fs-greenCard-auth: 4vw;
+        --fs-greenCard-info: 2.5vw;
+    }
+
+    .paraTi__slide1,
+    .paraTi__slide2{
+        flex-direction: column;
+        &__textleft{
+            padding: 0;
+            align-items: center;
+    
+            & > div {
+                text-align: center;
+            }
+        }
+    }
+
+    .paraTi__slide1{
+        padding: 2rem 2rem;
+        align-items: center;
+
+        &__img{
+            padding: 5rem 5rem;
+        }
+
+        &__textleft-mid{
+            margin: 9rem 0;
+        }
+
+        &__textleft-bot{
+            padding: 3rem;
+        }
+        
+    }
+
+    .paraTi__slide2{
+        &__rightCard{
+
+            &-img{
+                padding: 0 3rem;
+            }
+
+            &-cardBody{
+                position: unset;
+            }
+        }
+    }
+
+    .paraTi__slide4{
+        &-title{
+            font-size: 8vw;
+        }
+        &__cards{
+            &-front{
+                font-size: 1.5rem;
+            }
+            &-back{
+                font-size: 1.2rem;
+            }
+        }
+    }
+    .itembox{
+        border-top-left-radius: 60px;
+        border-bottom-right-radius: 60px;
+    }
+
+    .reviewCard{
+        width: 90%;
+    }
+}
