--- a/saludconciencia/src/sass/_paraTi.scss
+++ b/saludconciencia/src/sass/_paraTi.scss
@@ -8,8 +8,8 @@ $fs-600: 3rem;
 :root{
     --fs-slide5: 3vw;
 
-    --fs-titulos: 4vw;
-    --fs-subtitulos: 2vw;
+    --fs-titulos: 3.5vw;
+    --fs-subtitulos: 1.5vw;
     --fs-agenda: 2vw;
 
     --fs-greenCard-main: 1.8vw;
@@ -23,6 +23,7 @@ $fs-600: 3rem;
 
 .paraTi__slide1{
     display: flex;
+    //padding-top: 2rem;
     &__textleft{
         flex: 0 0 50%;
         display: flex;
@@ -31,6 +32,7 @@ $fs-600: 3rem;
         align-items: flex-start;
 
         padding-left: 3%;
+        padding-bottom: 10%;
         &-up{
             color: $color_text_green;
             font-size: var(--fs-titulos);
@@ -63,7 +65,7 @@ $fs-600: 3rem;
             }
 
             &:focus{
-                
+
             }
         }
     }
@@ -71,7 +73,7 @@ $fs-600: 3rem;
     &__img{
         align-self: center;
         height: 80%;
-        padding: 3% 3%;
+        //padding: 3% 3%;
         & > img {
             width: 100%;
             height: auto;
@@ -92,6 +94,7 @@ $fs-600: 3rem;
         align-items: flex-start;
         padding-left: 3%;
         padding-right: 10%;
+        padding-bottom: 20%;
 
         &-up{
             color: $color_text_green;
@@ -117,6 +120,7 @@ $fs-600: 3rem;
 
     &__rightCard{
         position: relative;
+        padding: 2%;
         &-img{
             & > img {
                 width: 100%;
@@ -171,8 +175,8 @@ $fs-600: 3rem;
         $borderPx: 8px;
         $gapSpan: 0vw;
         &-itemboxBlack{
-            background-color: black;
-            border: $borderPx solid black;
+            background-color: #030027; //030027
+            border: $borderPx solid #030027;
             color: white;
             &:hover {
                 background-color: white;
@@ -208,6 +212,7 @@ $fs-600: 3rem;
             background-color: $color-gray-dark-3;
             border: $borderPx solid $color_gray-dark-3;
             color: darken($color_text_gray, 10%);
+            color: white;
             &:hover {
                 background-color: white;
                 color: black;
